functional version with good error reporting

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node $NODE_DEBUG_OPTION crawler.js"
+    "start": "node crawler.js",
+    "debug": "node %NODE_DEBUG_OPTION% crawler.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mongodb": "3.1.1",
     "request": "^2.87.0",
-    "function-rate-limit": "^1.1.0"
+    "async": "^2.6.1",
+    "object-hash": "^1.3.0"
   }
 }
