--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node crawler.js",
-    "debug": "node %NODE_DEBUG_OPTION% crawler.js"
+    "debug": "node $NODE_DEBUG_OPTION crawler.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "3.1.1",
+    "mongodb": "^3.1.4",
     "request": "^2.87.0",
     "async": "^2.6.1",
-    "object-hash": "^1.3.0"
+    "object-hash": "^1.3.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
